--- a/index.html
+++ b/index.html
@@ -71,32 +71,67 @@ footer {
 </head>
 <body>
 
-<h2>CSS Layout Float</h2>
-<p>In this example, we have created a header, two columns/boxes and a footer. On smaller screens, the columns will stack on top of each other.</p>
-<p>Resize the browser window to see the responsive effect (you will learn more about this in our next chapter - HTML Responsive.)</p>
+<h2>Política de Privacidad</h2>
+<p>Alku Animations provee esta Política de Privacidad para explicar como utiliza, recolecta o guarda la información del usuario en aplicaciones desarrolladas por Alku. Alku Animations respeta la privacidad de sus usuarios y está comprometido con cuidar tal información. A continuación informamos sobre <b>los tipos de información que recolectamos y como la recolectamos</b></p>
 
-<header>
-  <h2>Cities</h2>
-</header>
+<p><b>
+Información personal
+</b>
+</p>
+<p>
+Alku Animations no recolecta ninguna clase de información personal como identificadores de anuncios de Google o Apple.
+Alku Animations no integra ningún SDK que permita publicitar contenido a sus usuarios, ni que permita analizar el uso de sus aplicaciones o que permita administrar cuentas.
+Alku Animations no recolecta información como dirección o direcciones ip del usuario.
+</p>
 
-<section>
-  <nav>
-    <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
-    </ul>
-  </nav>
-  
-  <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-  </article>
-</section>
+<p><b>
+Información no personal
+</b>
+</p>
+
+<p>
+Alku Animations no recolecta ninguna información técnica para mejorar nuestros servicios.
+</p>
+
+<p><b>
+Niños
+</b>
+</p>
+
+<p>
+Explícitamente en esta sección notificamos que la información de niños menores de 13 años no es recolectada, ni guardada ni utilizada.
+</p>
+
+<p><b>
+Seguridad
+</b>
+</p>
+
+<p>
+La aplicación almacena localmente datos únicamente relacionados con el juego, no datos personales ni técnicos por lo que declaramos que no estamos haciendo uso de ninguna seguridad de datos ya que es innecesario.
+</p>
+
+<p><b>
+Cambios de esta política de privacidad
+</b>
+</p>
+
+<p>
+Cambiaremos esta política de privacidad conforme sea necesario para las nuevas actualizaciones del juego. Por favor revísala cuando lancemos una actualización. Esta Política de Privacidad ha sido escrita el 28/07/2020.
+</p>
+
+<p><b>
+Información de Contacto para esta Política de Privacidad
+</b>
+</p>
+
+
+<p>
+Si tienes alguna pregunta acerca de nuestra política de Privacidad no dudes en escribirnos al email alkuanimations@gmail.com.
+</p>
 
 <footer>
-  <p>Footer</p>
+  <p>Alku Animations 2020</p>
 </footer>
 
 </body>
