--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@ Seguridad
 <p>
 La aplicación almacena localmente datos únicamente relacionados con el juego, no datos personales ni técnicos por lo que declaramos que no estamos haciendo uso de ninguna seguridad de datos ya que es innecesario.
 </p>
+  
+<p><b>
+SDK Partners
+</b>
+</p>
+
+<p>
+En está sección se declara que la aplicación utiliza el SDK de Facebook con el único fin de obtener las métricas de descargas realizadas a través de Facebook.
+</p>
 
 <p><b>
 Cambios de esta política de privacidad
@@ -117,7 +126,7 @@ Cambios de esta política de privacidad
 </p>
 
 <p>
-Cambiaremos esta política de privacidad conforme sea necesario para las nuevas actualizaciones del juego. Por favor revísala cuando lancemos una actualización. Esta Política de Privacidad ha sido escrita el 28/07/2020.
+Cambiaremos esta política de privacidad conforme sea necesario para las nuevas actualizaciones del juego. Por favor revísala cuando lancemos una actualización. Esta Política de Privacidad ha sido actualizada el 13/10/2020.
 </p>
 
 <p><b>
