--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@ Información personal
 </b>
 </p>
 <p>
-Alku Animations no recolecta ninguna clase de información personal como identificadores de anuncios de Google o Apple.
+Alku Animations recolecta información personal como nombre de usuario, nickname, ciudad y correo electrónico. Esto lo hacemos con el único fin de realizar promociones y sorteos externos para así promocionar el uso del videojuego.
+Los datos no serán utilizados con fines comerciales es decir no utilizamos los datos para obtener leads para ventas cruzadas o para ventas de terceros.
 Alku Animations no integra ningún SDK que permita publicitar contenido a sus usuarios, ni que permita analizar el uso de sus aplicaciones o que permita administrar cuentas.
 Alku Animations no recolecta información como dirección o direcciones ip del usuario.
 </p>
@@ -99,7 +100,7 @@ Niños
 </p>
 
 <p>
-Explícitamente en esta sección notificamos que la información de niños menores de 13 años no es recolectada, ni guardada ni utilizada.
+Los datos que se utilizan al iniciar el videojuego no son obligatorios, son opcionales y deberán ser de una persona mayor de edad. No requerimos el ingreso de datos de menores de edad.
 </p>
 
 <p><b>
@@ -108,8 +109,7 @@ Seguridad
 </p>
 
 <p>
-La aplicación almacena localmente datos únicamente relacionados con el juego, no datos personales ni técnicos por lo que declaramos que no estamos haciendo uso de ninguna seguridad de datos ya que es innecesario.
-</p>
+La aplicación almacena localmente datos únicamente relacionados con el juego, almacena datos personales no sensibles solo para contactar a los usuarios en caso de alguna promoción por uso del videojuego.
   
 <p><b>
 SDK Partners
@@ -126,7 +126,7 @@ Cambios de esta política de privacidad
 </p>
 
 <p>
-Cambiaremos esta política de privacidad conforme sea necesario para las nuevas actualizaciones del juego. Por favor revísala cuando lancemos una actualización. Esta Política de Privacidad ha sido actualizada el 13/10/2020.
+Cambiaremos esta política de privacidad conforme sea necesario para las nuevas actualizaciones del juego. Por favor revísala cuando lancemos una actualización. Esta Política de Privacidad ha sido actualizada el 25/11/2024.
 </p>
 
 <p><b>
@@ -140,7 +140,7 @@ Si tienes alguna pregunta acerca de nuestra política de Privacidad no dudes en 
 </p>
 
 <footer>
-  <p>Alku Animations 2020</p>
+  <p>Alku Animations 2024</p>
 </footer>
 
 </body>
